@@ -1,3 +1,6 @@
+2013-12-06 Aurelien Degremont <aurelien.degremont@cea.fr>
+	* Restore table display for local commands (ticket #172)
+
 2013-11-05 Florent Thery <florent.thery@bull.net>
 	* Do not copy tuning.conf if -L or -R option is specified and handle
 	-n and -x options when copying tuning.conf (ticket #168).
